# Melissae-Honeypot-Framework

./: CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  melissae.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  documentation_issue.md  feature_request.md
agent/: docker-compose.yml  melissae-agent.sh
agent/daemon/: Dockerfile  agent_daemon.py  config.yml  log_parser.py
api/: api.py
dashboard/: Dockerfile  search.html  tailwind.config.js  threat-intel.html
dashboard/conf/: dashboard.conf
dashboard/css/: styles.css  threat-intel.css
dashboard/js/: dashboardDisplay.js  main.js  searchDisplay.js  searchEngine.js  threatintelDisplay.js
dashboard/src/: App.jsx  api.js  index.css  search.js  stix.js
manager/: docker-compose.yml  health_poller.py  melissae-manager.sh
manager/api/: Dockerfile  api.py
manager/dashboard/: index.html  package.json  tailwind.config.js
manager/inspector/: Dockerfile  config.yml  inspector.py  pyproject.toml  tools.py
manager/inspector/prompts/: system.md
manager/inspector/skills/: threat-briefing.md
manager/inspektor/: Dockerfile  config.yml  inspektor.py  pyproject.toml  tools.py
manager/inspektor/prompts/: system.md
manager/inspektor/skills/: agent-health.md  alert-triage.md  attacker-ranking.md  ip-investigation.md  log-hunting.md  threat-briefing.md
rules/: MLS001.yml  MLS002.yml  MLS003.yml  MLS004.yml  MLS005.yml  MLS006.yml  MLS007.yml  MLS008.yml  MLS009.yml  MLS010.yml  MLS011.yml  MLS012.yml  MLS013.yml  MLS014.yml
scripts/: logParser.py  purgeLogs.py  threatIntel.py
(+65 files in other folders)
