[project]
name = "inspector"
version = "1.0.0"
description = "Inspector — Melissae AI threat analyst"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymongo>=4.6",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "langchain>=0.2",
    "langchain-aws>=0.1.17",
]

[tool.uv]
package = false
