[project]
name = "inspektor"
version = "1.0.0"
description = "Inspektor — Melissae AI threat analyst"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymongo>=4.6",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "flask>=3.0",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-aws>=0.2,<0.3",
]

[tool.uv]
package = false
